<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/school_1" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A1572fc"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/len_24"
        android:paddingBottom="@dimen/len_32">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/label_update_info_tips"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/len_92"
            android:layout_height="@dimen/len_92"
            android:layout_marginTop="32dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            android:src="@drawable/default_holder_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_portrait_tips"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <ImageView
            android:id="@+id/iv_sex_man"
            android:layout_width="@dimen/len_24"
            android:layout_height="@dimen/len_24"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/sel_bg_sex"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_sex_man"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar" />

        <net.qiujuer.genius.ui.widget.EditText
            android:id="@+id/edt_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/label_desc_tips"
            android:inputType="textMultiLine"
            android:maxLength="64"
            android:maxLines="2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textColorHint="@color/white_alpha_128"
            android:textSize="@dimen/font_16"
            app:gHintTitle="none"
            app:gLineColor="@color/white_alpha_160"
            app:gLineSize="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/font_28">

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/len_172"
            android:layout_height="@dimen/len_44"
            android:layout_centerInParent="true"
            android:background="@drawable/sel_btn_bg_black_alpha_44"
            android:gravity="center"
            android:text="@string/label_submit"
            android:textColor="@color/white"
            app:gTouchColor="@color/white_alpha_48"
            app:gTouchCornerRadius="@dimen/font_22"
            app:gTouchEffect="ripple"
            android:clickable="true"/>
    </RelativeLayout>

</LinearLayout>
</FrameLayout>